@@ -19,6 +19,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* Change ``DATE_OBS``, ``DATE_END``, ``TIME_OBS`` and ``TIME_END`` FITS keywords
+  into ``DATA-OBS``, ``DATE-END``, ``TIME-OBS`` and ``TIME-END``
 * [`2234 <https://cta-redmine.irap.omp.eu/issues/2234>`_] -
   Prevent negative response values for COMPTEL IRF
 * [`2184 <https://cta-redmine.irap.omp.eu/issues/2184>`_] -
